@@ -1,10 +1,18 @@
-ArsTechnica (unofficial w/o permission) #Minecraft Pack
+Ars Technica (unofficial w/o permission) #Minecraft Pack
 =======================================================
-Hopefully this will work as a way for use to be able to work on our customized MC mod pack.
-I know that technically it's not the proper way to do things, but since its going to be a private pack just for us in the thread, it should be ok.
 
-I've reorganized how I'm uploading this, so it should work better with MultiMC
+This is the Ars Technica Forum Minecraft Tech Pack for use on one of the private community servers.
 
+We're now in feature freeze!  No more mods before we start playing for real, people!
+
+*Important Notes:*
+- No automated mining of the Overworld.  Use a Minecraft age, and keep the Overworld landscape clean.
+- Do not run a quarry without chunk loading your processing facility.
+- Don't use Mekanism Dynamic Tanks because they're crashy.  Store your liquids in Railcraft tanks.
+Enough with the don'ts: 
+- Please DO post issues on Github if you have problems.
+- Log into IRC: irc.arstechnica.com #minecraft
+- Dig deeper, build taller, and have fun.
 
 Installation Instructions 
 ---------------------------------------
@@ -19,7 +27,6 @@ Installation Instructions
 - Before launching Minecraft, be sure that you have increased the amount of RAM available to Minecraft.  This mod pack requires a larger than standard amount of RAM to run properly.  In MultiMC, you may alter the amount of RAM allocated:
   - To all instances: in the Settings Dialog, under the Java Tab, in the Maximum Memory Allocation field.
   - To just one instance: from the instance Settings Dialog, available from the context menu of the instance. Otherwise, same as above.
-- Also in the Java tab, enter "-XX:MaxPermSize=128m" in the JVM Arguments field
 - Double click on the ArsTech Pack icon to launch Minecraft
 - Check that MC says you have 11billion mods loaded, if not, check that forge .738 is in the instMods folder
 - Log into the test server @ qchronod.diskstation.me:25565
